@@ -3,6 +3,7 @@ Section: games
 Priority: optional
 Maintainer: Paul Sladen <ubuntu@paul.sladen.org>
 Build-Depends: debhelper (>= 5)
+Build-Depends-Indep: vorbis-tools
 Standards-Version: 3.8.0
 Homepage: http://www.railsimroutes.co.uk/x-city_south/
 
