@@ -10,6 +10,7 @@ birmingham-cross-city-south (1.31.03-0ubuntu1) unreleased; urgency=low
   * Request lzma compression from dh_builddeb
   * Symlink duplicate models/textures together
   * Add a known-issues.txt file and add to docs.
+  * Recode the huge .wav audio files to .ogg to save 90% size.
 
  -- Paul Sladen <ubuntu@paul.sladen.org>  Wed, 18 Feb 2009 23:30:30 +0000
 
